--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <!-- barra de navegação -->
+  <!-- Barra de navegação -->
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -81,6 +81,13 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+<!-- Roda pé -->
+
+<div id="rdp">
+  <p class="p" id="p2">Encontre Uma Outlet da Nike</p>
+  <p class="p">Cadastre-se Para Receber Novidades</p>
+</div>
 
  <!-- Bootstrap JavaScript Libraries -->
 
