--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </form>
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#" id="login"><img src="img/login.png" height="70px" width="70px"></a>
+                <a class="nav-link" href="#" id="login"><img src="img/LOGINIKE.png" height="70px" width="70px"></a>
               </li>
               </ul>
           </div>
@@ -81,13 +81,6 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
-<!-- Roda pé -->
-
-<div id="rdp">
-  <p class="p" id="p2">Encontre Uma Outlet da Nike</p>
-  <p class="p">Cadastre-se Para Receber Novidades</p>
-</div>
 
  <!-- Bootstrap JavaScript Libraries -->
 
