--- a/index.html
+++ b/index.html
@@ -7,56 +7,47 @@
     <title>GuigasOutlet</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/inicial.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
   <!-- Barra de navegação -->
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="header">
+    <div class="menu-bar">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/Sem título.png" height="100px" width="170px"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="index.html"><img src="img/Sem título.png" class="img"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Lançamentos</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tênis</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Coleções
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Masculino</a></li>
-                  <li><a class="dropdown-item" href="#">Feminino</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Infantil</a></li>
-                </ul>
+                <a class="nav-link" href="HTML/sneakers.html">Tênis</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+                <a class="nav-link" href="HTML/masculino.html">Masculino</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="HTML/feminino.html">Feminino</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="HTML/infantil.html">Infantil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="HTML/login.html">Login</a>
+              </li>
+              
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#" id="login"><img src="img/LOGINIKE.png" height="70px" width="70px"></a>
-              </li>
-              </ul>
           </div>
         </div>
       </nav>
+    </div>
+  </div>
 
   <!--  Carrossel -->
 
