--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="HTML/infantil.html">Infantil</a>
               </li>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <li class="nav-item">
                 <a class="nav-link" href="HTML/login.html">Login</a>
               </li>
@@ -54,13 +55,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/image1car.jpg" class="d-block w-100" alt="...">
+        <img src="../trabalho_site/IMG/Carrosel/image1car.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/image2car.jpg" class="d-block w-100" alt="...">
+        <img src="../trabalho_site/IMG/Carrosel/image2car.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/image3car.jpg" class="d-block w-100" alt="...">
+        <img src="../trabalho_site/IMG/Carrosel/image3car.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
