--- a/HTML/sneakers.html
+++ b/HTML/sneakers.html
@@ -17,7 +17,7 @@
   <div class="menu-bar">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../IMG/Sem título.png" class="img"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../IMG/Sem título.png" class="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,9 +50,72 @@
   </div>
 </div>
 
-<!-- Loja Tênis -->
+<!-- Produtos -->
 
+<section id="product1" class="section-p1">
+  <h2>Coleção de Tênis</h2>
+  <p>Unisex</p>
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/tenis/airforce1.jpg" class="logo">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Air Force One</h5>
+        <h4>120R$</h4>
+      </div>
+    </div>
+  </div>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/tenis/12molas.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>12 Molas</h5>
+        <h4>300R$</h4>
+      </div>
+    </div>
+  </div>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/tenis/kyrie5.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Tênis Kyrie Irvin 5</h5>
+        <h4>600R$</h4>
+      </div>
+    </div>
+  </div>
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/tenis/picovelcroinfantil.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Tênis Nike Pico Velcro Infantil</h5>
+        <h4>100R$</h4>
+      </div>
+    </div>
+  </div>
 
+  <!-- Roda pé -->
+
+ <section class="footer">
+  <ul class="lista">
+    <li>
+      <a href="#">Serviços</a>
+    </li>
+    <li>
+      <a href="#">Sobre</a>
+    </li>
+    <li>
+      <a href="#">Termos</a>
+    </li>
+    <li>
+      <a href="#">Política de Privacidade</a>
+    </li>
+  </ul>
+ </section>
       
  <!-- Bootstrap JavaScript Libraries -->
 
