--- a/HTML/infantil.html
+++ b/HTML/infantil.html
@@ -17,7 +17,7 @@
   <div class="menu-bar">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../IMG/Sem título.png" class="img"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../IMG/Sem título.png" class="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,6 +50,85 @@
   </div>
 </div>
       
+<!-- Produtos -->
+
+<section id="product1" class="section-p1">
+  <h2>Coleção de Roupas</h2>
+  <p>Infantis</p>
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/infantil/body1.jpg" class="logo">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Body Estampado</h5>
+        <h4>70R$</h4>
+      </div>
+    </div>
+  </div>
+  &nbsp;&nbsp;
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/infantil/body2.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Body Estampado</h5>
+        <h4>70R$</h4>
+      </div>
+    </div>
+  </div>
+  &nbsp;&nbsp;
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/infantil/calçamoletom.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Calça Moletom</h5>
+        <h4>90R$</h4>
+      </div>
+    </div>
+  </div>
+  &nbsp;&nbsp;
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/infantil/camisa1.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Camiseta</h5>
+        <h4>90R$</h4>
+      </div>
+    </div>
+  </div>
+  &nbsp;&nbsp;
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/infantil/kitcompleto.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Kit Nike Completo</h5>
+        <h4>150R$</h4>
+      </div>
+    </div>
+  </div>
+
+  <!-- Roda pé -->
+
+ <section class="footer">
+  <ul class="lista">
+    <li>
+      <a href="#">Serviços</a>
+    </li>
+    <li>
+      <a href="#">Sobre</a>
+    </li>
+    <li>
+      <a href="#">Termos</a>
+    </li>
+    <li>
+      <a href="#">Política de Privacidade</a>
+    </li>
+  </ul>
+ </section>
+
  <!-- Bootstrap JavaScript Libraries -->
 
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
