--- a/HTML/masculino.html
+++ b/HTML/masculino.html
@@ -17,7 +17,7 @@
   <div class="menu-bar">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../IMG/Sem título.png" class="img"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../IMG/Sem título.png" class="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,6 +49,82 @@
     </nav>
   </div>
 </div>
+
+<!-- Produtos -->
+
+<section id="product1" class="section-p1">
+  <h2>Coleção de Roupas</h2>
+  <p>Masculinas</p>
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/masculino/camiseta1.jpg" class="logo">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Camiseta Nike Estampada</h5>
+        <h4>100R$</h4>
+      </div>
+    </div>
+  </div>
+  &nbsp;&nbsp;
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/masculino/camiseta2.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Camisa Nike Lisa</h5>
+        <h4>80R$</h4>
+      </div>
+    </div>
+  </div>
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/masculino/calçamoletom.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Calça Moletom</h5>
+        <h4>120R$</h4>
+      </div>
+    </div>
+  </div>
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/masculino/jaqueta.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Jaqueta</h5>
+        <h4>200R$</h4>
+      </div>
+    </div>
+  </div>
+  <div class="pro-container">
+    <div class="pro">
+      <img src="../IMG/masculino/kitcompleto.jpg" class="img">
+      <div class="des"> 
+        <span>nike</span>
+        <h5>Kit Nike Completo</h5>
+        <h4>450R$</h4>
+      </div>
+    </div>
+  </div>
+
+  <!-- Roda pé -->
+
+ <section class="footer">
+  <ul class="lista">
+    <li>
+      <a href="#">Serviços</a>
+    </li>
+    <li>
+      <a href="#">Sobre</a>
+    </li>
+    <li>
+      <a href="#">Termos</a>
+    </li>
+    <li>
+      <a href="#">Política de Privacidade</a>
+    </li>
+  </ul>
+ </section>
 
  <!-- Bootstrap JavaScript Libraries -->
 
