--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="menu-bar">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="img/Sem título.png" class="img"></a>
+          <a class="navbar-brand" href="index.html"><img src="img/Sem título.png" class="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -73,6 +73,25 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+ <!-- Roda pé -->
+
+ <section class="footer">
+  <ul class="lista">
+    <li>
+      <a href="#">Serviços</a>
+    </li>
+    <li>
+      <a href="#">Sobre</a>
+    </li>
+    <li>
+      <a href="#">Termos</a>
+    </li>
+    <li>
+      <a href="#">Política de Privacidade</a>
+    </li>
+  </ul>
+ </section>
 
  <!-- Bootstrap JavaScript Libraries -->
 
